# Back-To-Arcades

./: CMakeLists.txt  LICENSE  License  Makefile  README.md  ReadMe.md  main.cpp
Core/include/: Core.hpp  DLLoader.hpp  Exception.hpp
Core/src/: Core.cpp
Doc/: CMakeDoc.md
Include/: Core.hpp  Main.hpp
Include/DynamicLoaders/: DLLoader.hpp  Execption.hpp
Src/: Core.cpp  Main.cpp
Src/DynamicLoaders/: CMakeLists.txt  DLLoader.cpp  Execption.cpp
lib/Games/Include/: IGame.hpp
lib/Games/SNAKE/: CMakeLists.txt
lib/Games/SNAKE/include/: ASnake.hpp
lib/Games/SNAKE/src/: ASnake.cpp
lib/Games/Snake/: Makefile
lib/Games/Snake/include/: ASnake.hpp
lib/Games/Snake/src/: ASnake.cpp
lib/Games/TETRIS/: CMakeLists.txt
lib/Games/TETRIS/src/: ATetris.hpp
lib/Games/Tetris/: Makefile
lib/Games/Tetris/include/: ATetris.hpp
lib/Games/Tetris/src/: ATetris.cpp
lib/Games/include/: IGame.hpp
lib/Graphic/Include/: IGraphicRender.hpp
lib/Graphic/NCURSES/: CMakeLists.txt  Makefile
lib/Graphic/NCURSES/include/: ANcurses.hpp  NCURSES.hpp
lib/Graphic/NCURSES/src/: ANcurses.cpp  NCURSES.cpp
lib/Graphic/SDL2/: CMakeLists.txt  Makefile
lib/Graphic/SDL2/include/: ASdl2.hpp  SDL2.hpp
lib/Graphic/SDL2/src/: ASdl2.cpp  SDL2.cpp
lib/Graphic/SFML/: CMakeLists.txt  Makefile
lib/Graphic/SFML/include/: ASfml.hpp  SFML.hpp
lib/Graphic/SFML/src/: ASfml.cpp  SFML.cpp
lib/Graphic/include/: IRender.hpp
